Freestyle line glitch #47705

Closed
opened 2016-03-06 21:26:23 +01:00 by WK Bong · 12 comments

System Information
Win10, Linux Mint 17.3
GTX560ti, GTX980

Blender Version
Broken: 2.76 to 2.77RC2
Worked: 2.75a

Short description of error
When there are lines crossing each other, some lines are broken.
Problem only occur after 2.76.
Example 1
R2.jpg
mesh looks like this for example 1
R3.jpg

Example 2
Bug.png

Exact steps for others to reproduce the error
Open file and render.
Please change camera for different view.
FSBUG.blend

**System Information** Win10, Linux Mint 17.3 GTX560ti, GTX980 **Blender Version** Broken: 2.76 to 2.77RC2 Worked: 2.75a **Short description of error** When there are lines crossing each other, some lines are broken. Problem only occur after 2.76. Example 1 ![R2.jpg](https://archive.blender.org/developer/F288850/R2.jpg) mesh looks like this for example 1 ![R3.jpg](https://archive.blender.org/developer/F288852/R3.jpg) Example 2 ![Bug.png](https://archive.blender.org/developer/F288848/Bug.png) **Exact steps for others to reproduce the error** Open file and render. Please change camera for different view. [FSBUG.blend](https://archive.blender.org/developer/F288855/FSBUG.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WeeKwongBong

Added subscriber: @WeeKwongBong

#47502 was marked as duplicate of this issue

#47502 was marked as duplicate of this issue

#47702 was marked as duplicate of this issue

#47702 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey
Tamito Kajiyama was assigned by Sergey Sharybin 2016-03-08 11:08:01 +01:00
Author

Any update on this?
The problem only occur after 2.75a

Any update on this? The problem only occur after 2.75a
Author

Any update?
This has cause me few job losses.

Any update? This has cause me few job losses.

Scaling down the mesh objects by a factor of 10 and zooming the camera into the scaled objects to compensate the smaller sizes would give a correct line rendering result. This means that there is an issue related to numerical precision (i.e., float and double in C/C++). I will further test the code and make an attempt to fix the problem.

Scaling down the mesh objects by a factor of 10 and zooming the camera into the scaled objects to compensate the smaller sizes would give a correct line rendering result. This means that there is an issue related to numerical precision (i.e., float and double in C/C++). I will further test the code and make an attempt to fix the problem.

This issue was referenced by db28ff54d6

This issue was referenced by db28ff54d650af69bfa6001c60548fcd689382e2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @StephenHoward-4, @kjym3

Added subscribers: @StephenHoward-4, @kjym3
Added subscribers: @Eranekao, @JorgeBernalMartinez, @QuentinWenger, @mont29, @LukasTonne, @ignatz, @cardboard-2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47705
No description provided.